New Dell Platforms Update
Updated 4 new Dell Platforms

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -612,6 +612,38 @@ function Port_Config() {
 </tr> 
 <tr>
 <td>Dell</td>
+<td>N3248PXE</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3.X5</td>
+<td>48x10GCU+4x25G-2x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Dell</td>
+<td>N3248TE</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3.X3</td>
+<td>48x1G+4x10G-2x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Dell</td>
+<td>S5212F</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3.X5</td>
+<td>12x25G+3x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Dell</td>
+<td>S5224F</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3.X5</td>
+<td>24x25G+4x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Dell</td>
 <td>S5232F-ON</td>
 <td class="asic_vendor">Broadcom</td>
 <td>Trident 3</td>
