--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <!-- TEXT BASED LOGO -->
           <p>
 		  <a class="navbar-brand" style="margin-top: -10px" href="index.html"><img src="assets/img/logo.png"></a>
-		  <a class="navbar-brand" style="margin-top: -10px" href="index.html"><img src="assets/img/ocp_logo.png"></a>
+		  <a class="navbar-brand" style="margin-top: -10px" href="index.html"><img src="assets/img/lf_logo.svg"></a>
 		  </p>
           <!-- IMG BASED LOGO  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
@@ -152,7 +152,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a class="mu-read-more-btn bbutton" target="_blank" href="https://github.com/Azure/SONiC/blob/master/sourcecode.md">GitHub</a> 
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a class="mu-read-more-btn bbutton" target="_blank" href="https://www.opencompute.org/">OCP</a>			
+			<a class="mu-read-more-btn bbutton" target="_blank" href="https://www.linuxfoundation.org/">Linux Foundation</a>			
 		</p>
 
       </div>
@@ -228,7 +228,7 @@
         <div class="row">
           <div class="col-lg-6 col-md-6">
             <div class="mu-about-us-right"> 
-			  <center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Upcoming OCP Events</h3>	</center>
+			  <center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Past SONiC Events</h3>	</center>
 			  <figure>
 			  <center><img style="width: 100%" height="280.35" src="assets/img/slider/2.jpg" alt="img"></center>
 			  </figure>				
@@ -358,7 +358,7 @@
           <div class="mu-latest-courses-area">
             <!-- Start Title -->
             <div class="mu-title">
-              <h2 style="color: #01BAFD" >Our Partners </h2>
+              <h2 style="color: #01BAFD" >Contributing Organizations </h2>
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
             <!-- End Title -->
@@ -478,9 +478,6 @@
 
   </body>
   <!--  
-   Copyright 2019 markups.io
-   Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-   The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.  
+   Copyright © The Linux Foundation®.  SONiC and SONiC Foundation are trademarks of The Linux Foundation. For web site terms of use, trademark usage and other project policies please see https://linuxfoundation.org/policies/. 
   -->
 </html>
