--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				<li><a style="color: black" href="workgroups.html">Workgroups</a></li>
 				<li><a style="color: black" href="https://github.com/Azure/SONiC/wiki/Becoming-a-contributor">How To Contribute</a></li>  
 				<li><a style="color: black" href="https://github.com/Azure/SONiC/blob/master/governance.md">Governance</a></li> 
+				<li><a style="color: black" href="https://github.com/Azure/SONiC/blob/master/SONiC%20Foundation%20Technical%20Charter.pdf">SONiC Foundation Technical Charter</a></li>
 				<li><a style="color: black" href="https://github.com/Azure/sonic-security">Security Process</a></li>
 		        <li><a style="color: black" href="https://github.com/Azure/SONiC/wiki/SONiC-Logo-and-Trademark-Guidance">License & Logo</a></li>		       
               </ul>
@@ -152,7 +153,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a class="mu-read-more-btn bbutton" target="_blank" href="https://github.com/Azure/SONiC/blob/master/sourcecode.md">GitHub</a> 
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a class="mu-read-more-btn bbutton" target="_blank" href="https://www.linuxfoundation.org/">Linux Foundation</a>			
+			<a class="mu-read-more-btn bbutton" style="white-space: nowrap;" target="_blank" href="https://www.linuxfoundation.org/">Linux Foundation</a>
 		</p>
 
       </div>
@@ -230,14 +231,16 @@
             <div class="mu-about-us-right"> 
 			  <center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Past SONiC Events</h3>	</center>
 			  <figure>
-			  <center><img style="width: 100%" height="280.35" src="assets/img/slider/2.jpg" alt="img"></center>
+			  <center><a href="https://events.linuxfoundation.org/open-networking-and-edge-exec-forum/"><img style="display:block;" width="100%" height="350.35" src="assets/img/slider/2.jpg" /></center>
 			  </figure>				
-            </div>
+			  </div>
+	  
+			  <p><br><br><br>
+			  &nbsp;&nbsp;&nbsp;&nbsp;
+			  </p>
             <div style="margin-top: -280px" class="mu-slider-content"> 
 		          <p><br></p>
-		          <p style="color: #B4FCC0;  font-weight: bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OCP Global Summit - Gone Virtual - 12-15 May 2020 &nbsp;&nbsp;<br>
-			  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;<a target="_blank" href="https://www.opencompute.org/summit/global-summit" class="mu-read-more-btn" >Join</a></p>
-			  <p><br><br><br>
+		          <p><br><br><br>
 			  &nbsp;&nbsp;&nbsp;&nbsp;
 			  </p>
 			  <p><br><br><br></p>
@@ -245,9 +248,9 @@
           </div>
           <div class="col-lg-6 col-md-6">
             <div class="mu-about-us-right"> 
-				<center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> SONiC Video OCP Virtual Summit 2020</h3></center>
-                <center><iframe width="90%" height="280.35" src="https://www.youtube.com/embed/mrOh1xnVjoI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
- </div>
+				<center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Virtual Event Video clip coming soon</h3></center>
+                <center><img style="width: 100%" height="350.35" src="assets/img/slider/3.jpg" alt="img"></center>
+ 			</div>
           </div>
         </div>
     </div>
@@ -333,13 +336,8 @@
               <div class="col-lg-6 col-md-6">
                 <div class="mu-about-us-right">
 				<h3 style="color: #01BAFD; margin-top: 1px; font-weight: bold">Presentations</h3>
-				    <p> <a href="https://www.youtube.com/watch?v=b7vkNN7Fuyk">OCP 2020 Virtual Summit - Panel Discussion - Open Networking and SONiC</a></p>
-				    <p> <a href="https://www.youtube.com/embed/7ZlbHIkgFRQ">SONiC Video From OCP Summit 2019</a></p>
-			        <p> <a href="https://www.youtube.com/watch?v=YUr8EKFQZeY">OCP Amsterdam 2019 Regional Summit - Going SONiC Together</a></p>
-					<p> <a href="https://www.youtube.com/watch?v=TjD7PEB3jvg">OCP Amsterdam 2019 Regional Summit - SONiC – Reliability, Manageability and Extensibility</a></p>
-					<p> <a href="https://www.youtube.com/watch?v=Di6njI_gUKM">OCP Amsterdam 2019 Regional Summit - SONiC Ansible Test Automation</a></p>
-                    <p> <a href="https://www.youtube.com/watch?v=655Mg1dHkwo">OCP Amsterdam 2019 Regional Summit - Enabling PIM card hot swapping in SONiC for Minipack </a></p>
-			        <p> <a href="https://github.com/Azure/SONiC/wiki/Community-Meetings"> SONiC Community Meetings</a></p>					
+					<p> <a href="https://linuxfoundation.org/press-release/software-for-open-networking-in-the-cloud-sonic-moves-to-the-linux-foundation/">Software for Open Networking in the Cloud (SONiC) Moves to the Linux Foundation</a></p>
+				    <p> <a href="https://github.com/Azure/SONiC/wiki/Community-Meetings"> SONiC Community Meetings</a></p>					
 					<p> <a href="previous_presentations.html" style="color: blue; font-size: 18px">More Presentations</a></p>
                 </div>
               </div>		
@@ -351,20 +349,31 @@
   <!-- End More Videos -->
   
   <!-- Start latest course section -->
+  
+  
+		    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
 
+              <h2 style="color: #01BAFD; text-align:center;" >SONiC Fund Members </h2>
+              <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
+            </div>
+			<p style="padding-left: 0.5em; padding-bottom: 0.5em; vertical-align: center; line-height: 0.5m font-weight: bold; "> The SONiC Fund supports the activities of the SONiC Foundation. For information or to join the SONiC Fund, please click <span style="color: blue;"><a href="https://enrollment.lfx.linuxfoundation.org/?project=sonicfund"><font color="#6F65F3" >here.</font></a></span> </p>
+             <img style="height: auto; line-height: 0.5m; width: 100%;" alt="img" src="assets/img/sonic_fund_1.jpg">
+	<!-- End Title -->
+<br>
+      </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12">
-          <div class="mu-latest-courses-area">
-            <!-- Start Title -->
-            <div class="mu-title">
-              <h2 style="color: #01BAFD" >Contributing Organizations </h2>
+
+              <h2 style="color: #01BAFD; text-align:center;" >Contributing Organizations </h2>
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
             <!-- End Title -->
-                          <img style="height: auto; width: 100%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg">
-          </div>
-        </div>
+                          <img style="height: auto; line-height: 0.5m; width: 100%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg">
+
       </div>
     </div>
 
@@ -408,7 +417,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; Template based on <a href="http://www.markups.io/" rel="nofollow">MarkUps.io</a></p>
+          <p>&copy; Copyright © The Linux Foundation®. SONiC and SONiC Foundation are trademarks of The Linux Foundation. For web site terms of use, trademark usage and other project policies please  <a href="https://linuxfoundation.org/policies/" rel="nofollow"><font color="#6F65F3" >click here</font></a></p>
         </div>
       </div>
     </div>
