Updated the Azure page
Updated the Azure webpage for latest newsletters, moved OCP demo's to a new page and reduced logo's appearance

--- a/OCP_Virtual_Summit_2020_SONiC_Demos.html
+++ b/OCP_Virtual_Summit_2020_SONiC_Demos.html
@@ -47,7 +47,7 @@
 
   <!-- Start menu -->
   <section id="mu-menu">
-   </section>
+  </section>
   <!-- End menu -->
   <!-- Start search box -->
   <div id="mu-search">
@@ -71,7 +71,7 @@
      <div class="row">
        <div class="col-md-12">
          <div class="mu-page-breadcrumb-area">
-           <h2>SONiC Newsletters</h2>
+           <h2>OCP Virtual Summit 2020 SONiC Demos</h2>
          </div>
        </div>
      </div>
@@ -87,17 +87,17 @@
          <div class="mu-contact-area">
           <!-- start title -->
           <div class="mu-title">
-		  
-		    <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2021_12.html">2021 December Newsletter</a></p>
-		    <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2021_06.html">2021 June Newsletter</a></p>
-		    <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2021_03.html">2021 March Newsletter</a></p>
-		    <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2020_12.html">2020 December Newsletter</a></p>
-		    <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2020_09.html">2020 September Newsletter</a></p>
-		    <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2020_06.html">2020 June Newsletter</a></p>
-            <p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2019_12.html">2019 December Newsletter</a></p>
-			<p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2019_10.html">2019 October Newsletter</a></p>
-			<p><a style="color: blue" href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2019_08.pdf" type="application/pdf">2019 August Newsletter</a></p>
-          </div>
+			<p> <a href="https://www.youtube.com/watch?v=X8nyfmroabg&feature=youtu.be" > Disaggregating Cisco 8000: SONiC on fixed and modular hardware</a></p>
+			<p> <a href="https://www.youtube.com/watch?v=mU33ehcIdX0&feature=youtu.be" > Deep Dive: Enabling SONiC on the Cisco 8000 Platform</a></p>
+			<p> <a href="https://www.youtube.com/watch?v=yWTqsekKyq8&feature=youtu.be" > Running SONiC on the Cisco 8000</a></p>
+			<p> <a href="https://www.youtube.com/watch?v=wK-N6tWTUJs&feature=youtu.be" > Ixia UHD100T32 Emulates Rack of Servers to Validate SONiC 100GE Switch</a></p>
+			<p> <a href="https://ent.box.com/s/vrw36hh8usy4vqc70gmizjdevajwhd1e" > Broadcom: Congestion Visibility</a></p>
+			<p> <a href="https://ent.box.com/s/f787fyse1kb5s7z9xa7w6dlizhezbgf5" > Broadcom: High Scale NAT Demo</a></p>
+			<p> <a href="https://www.youtube.com/watch?v=KZMyxmM8gCs" > Insidepacket : Load balancer, disaggregated firewall</a></p>
+			<p> <a href="https://www.youtube.com/watch?v=GMXuPKmfE60" > Aviz Networks AVB Demo</a></p>
+			<p> <a href="https://www.youtube.com/watch?v=S0mzqHkYPCo" > Aviz Networks CLI Demo</a></p>
+			<p> <a href="https://dell.app.box.com/s/hre0v7v82a65muvbntfpmwr809rst7o6" > Dell sFlow on SONiC</a></p>
+		  </div>
           <!-- end title -->
          </div>
        </div>
@@ -127,10 +127,10 @@
 
   
   <!-- jQuery library -->
-  <script src="assets/js/jquery.min.js"></script> 
-  <script type="text/javascript">
+  <script src="assets/js/jquery.min.js"></script>  
+    <script type="text/javascript">
   $("#mu-menu").load("menu.html");
-  </script>  
+  </script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="assets/js/bootstrap.js"></script>   
   <!-- Slick slider -->
