--- a/index.html
+++ b/index.html
@@ -266,80 +266,29 @@
         <div class="col-md-12">
 			<div class="row">
 			  <div class="col-lg-6 col-md-6">				
-				  <h3 style="color: #01BAFD; margin-top: 1px; font-weight: bold"> OCP Virtual Summit 2020 SONiC Demos</h3>
-					<p>    
-					  <a href="https://www.youtube.com/watch?v=X8nyfmroabg&feature=youtu.be" >
-					  Disaggregating Cisco 8000: SONiC on fixed and modular hardware
-					</p>
-					<p>
-					  <a href="https://www.youtube.com/watch?v=mU33ehcIdX0&feature=youtu.be" >
-					  Deep Dive: Enabling SONiC on the Cisco 8000 Platform					  
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://www.youtube.com/watch?v=yWTqsekKyq8&feature=youtu.be" >
-					  Running SONiC on the Cisco 8000					  
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://www.youtube.com/watch?v=wK-N6tWTUJs&feature=youtu.be" >
-					  Ixia UHD100T32 Emulates Rack of Servers to Validate SONiC 100GE Switch
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://ent.box.com/s/vrw36hh8usy4vqc70gmizjdevajwhd1e" >
-					  Broadcom: Congestion Visibility   
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://ent.box.com/s/f787fyse1kb5s7z9xa7w6dlizhezbgf5" >
-					  Broadcom: High Scale NAT Demo  
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://www.youtube.com/watch?v=KZMyxmM8gCs" >
-					  Insidepacket : Load balancer, disaggregated firewall   
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://www.youtube.com/watch?v=GMXuPKmfE60" >
-					  Aviz Networks AVB Demo   
-					  </a>
-				    </p>
-					<p>
-					  <a href="https://www.youtube.com/watch?v=S0mzqHkYPCo" >
-					  Aviz Networks CLI Demo   
-					  </a>
-				    </p>		
-					<p>
-					  <a href="https://dell.app.box.com/s/hre0v7v82a65muvbntfpmwr809rst7o6" >
-					  Dell sFlow on SONiC   
-					  </a>
-				    </p>	
-				  <p> &nbsp;&nbsp;&nbsp;&nbsp; </p>
+				  <h3 style="color: #01BAFD; margin-top: 1px; font-weight: bold"> Presentations & Demos</h3>
+					<p> <a href="https://linuxfoundation.org/press-release/software-for-open-networking-in-the-cloud-sonic-moves-to-the-linux-foundation/">Software for Open Networking in the Cloud (SONiC) Moves to the Linux Foundation</a></p>
+				    <p> <a href="https://github.com/Azure/SONiC/wiki/Community-Meetings"> SONiC Community Meetings</a></p>					
+					<p> <a href="previous_presentations.html" style="color: blue; font-size: 18px">More Presentations</a></p>
+					<p> <a href="OCP_Virtual_Summit_2020_SONiC_Demos.html" style="color: blue; font-size: 18px">OCP Virtual Summit 2020 SONiC Demos</a></p>
+			  </div>				
+              <div class="col-lg-6 col-md-6">
+                 <p> &nbsp;&nbsp;&nbsp;&nbsp; </p>
 				  <h3 style="color: #01BAFD; margin-top: 1px; font-weight: bold"> News Letters</h3>
 				   <p>
-					  <a href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2020_06.html">
-					  SONiC June 2020 News Letter
+					  <a href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2021_12.html">
+					  SONiC Dec 2021 News Letter
 					</p>
 					<p>
-					  <a href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2019_12.html">
-					  SONiC December 2019 News Letter
+					  <a href="https://azure.github.io/SONiC/pdf/newsletters/SONiC_newsletter_2021_06.html">
+					  SONiC June 2021 News Letter
 					</p>
 
 					<p>
 					  <a href="newsletters.html" style="color: blue;">
 					  More Newsletters				  
 					  </a>
-				    </p>						
-			  </div>				
-              <div class="col-lg-6 col-md-6">
-                <div class="mu-about-us-right">
-				<h3 style="color: #01BAFD; margin-top: 1px; font-weight: bold">Presentations</h3>
-					<p> <a href="https://linuxfoundation.org/press-release/software-for-open-networking-in-the-cloud-sonic-moves-to-the-linux-foundation/">Software for Open Networking in the Cloud (SONiC) Moves to the Linux Foundation</a></p>
-				    <p> <a href="https://github.com/Azure/SONiC/wiki/Community-Meetings"> SONiC Community Meetings</a></p>					
-					<p> <a href="previous_presentations.html" style="color: blue; font-size: 18px">More Presentations</a></p>
-                </div>
+				    </p>
               </div>		
 			  
             </div>
@@ -359,7 +308,7 @@
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
 			<p style="padding-left: 0.5em; padding-bottom: 0.5em; vertical-align: center; line-height: 0.5m font-weight: bold; "> The SONiC Fund supports the activities of the SONiC Foundation. For information or to join the SONiC Fund, please click <span style="color: blue;"><a href="https://enrollment.lfx.linuxfoundation.org/?project=sonicfund"><font color="#6F65F3" >here.</font></a></span> </p>
-             <img style="height: auto; line-height: 0.5m; width: 100%;" alt="img" src="assets/img/sonic_fund_1.jpg">
+             <img style="height: auto; justify-content: center; width: 80%;" alt="img" src="assets/img/sonic_fund_1.jpg">
 	<!-- End Title -->
 <br>
       </div>
@@ -372,7 +321,7 @@
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
             <!-- End Title -->
-                          <img style="height: auto; line-height: 0.5m; width: 100%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg">
+                          <img style="height: auto; justify-content: center; width: 80%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg">
 
       </div>
     </div>
