--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
 			<p style="padding-left: 0.5em; padding-bottom: 0.5em; vertical-align: center; line-height: 0.5m font-weight: bold; "> The SONiC Fund supports the activities of the SONiC Foundation. For information or to join the SONiC Fund, please click <span style="color: blue;"><a href="https://enrollment.lfx.linuxfoundation.org/?project=sonicfund"><font color="#6F65F3" >here.</font></a></span> </p>
-             <img style="height: auto; class="center" width: 80%;" alt="img" src="assets/img/sonic_fund_1.jpg">
+             <center><img style="height: auto; text-align:center; width: 80%;" alt="img" src="assets/img/sonic_fund_1.jpg"></center>
 	<!-- End Title -->
 <br>
 <br>
@@ -322,7 +322,7 @@
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
             <!-- End Title -->
-                          <img style="height: auto; class="center" width: 80%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg">
+                         <center><img style="height: auto; text-align:center; width: 80%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg"></center>
 
       </div>
     </div>
