--- a/index.html
+++ b/index.html
@@ -229,9 +229,10 @@
         <div class="row">
           <div class="col-lg-6 col-md-6">
             <div class="mu-about-us-right"> 
-			  <center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Past SONiC Events</h3>	</center>
+			  <center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Past SONiC Events</h3></center>
 			  <figure>
-			  <center><a href="https://events.linuxfoundation.org/open-networking-and-edge-exec-forum/"><img style="display:block;" width="100%" height="350.35" src="assets/img/slider/2.jpg" /></center>
+			  <center><a href="https://events.linuxfoundation.org/open-networking-and-edge-exec-forum/" ><img style="display:block;" width="100%" height="350.35" src="assets/img/slider/2.jpg" /></center>
+			  </a>
 			  </figure>				
 			  </div>
 	  
@@ -247,10 +248,13 @@
             </div>				
           </div>
           <div class="col-lg-6 col-md-6">
-            <div class="mu-about-us-right"> 
-				<center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Virtual Event Video clip coming soon</h3></center>
-                <center><img style="width: 100%" height="350.35" src="assets/img/slider/3.jpg" alt="img"></center>
- 			</div>
+			<div class="mu-about-us-right"> 
+			
+			<center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Past SONiC Events</h3></center>
+			<figure>
+				<center><a href="https://www.youtube.com/v/watch?v=FuuSk_skSPM"><img style="display:block;" width="100%" height="350.35" src="assets/img/slider/3.jpg" /></center>
+				</figure>
+ </div>
           </div>
         </div>
     </div>
