Updated Innovium to Marvel
Updated Innovium to Marvel

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -551,7 +551,7 @@ function Port_Config() {
 <tr>
 <td>Celestica</td>
 <td>midstone-200i</td>
-<td class="asic_vendor">Innovium</td>
+<td class="asic_vendor">Marvell</td>
 <td>Teralynx 7</td>
 <td>128x100G</td>
 <td></td>
@@ -749,7 +749,7 @@ function Port_Config() {
 <tr>
 <td>Delta</td>
 <td>et-c032if</td>
-<td class="asic_vendor">Innovium</td>
+<td class="asic_vendor">Marvell</td>
 <td>Teralynx 7</td>
 <td>32x400G</td>
 <td></td>
