--- a/workgroups.html
+++ b/workgroups.html
@@ -349,6 +349,18 @@
                             </ol>
                         </p>
                     </div>
+						<div class="col-lg-6 col-md-6">
+                        <h3 style="color: #01BAFD; margin-top: 40px; font-weight: bold">SONiC-PINS Subgroup</h3>
+                        <p>Join the mailing list <font color="#0000FF" size="3">sonic-pins-subgroup@googlegroups.com</font></p>
+                        <p> Workgroup <a href="https://groups.google.com/g/sonic-pins-subgroup/"><font color="#0000FF" size="3">SONiC-PINS Subgroup</font></a>
+						<p> Current Status : <font color="Black" size="3">Active</font></p>
+                            <h4 style="margin-top: 20px; font-weight: bold">SONiC-PINS Subgroup Charter</h4></p>
+                        <p>
+                            <ol>
+                                <li> This subgroup is for PINS which extends SONiC with an Software-Defined Networking (SDN) interface and P4 programmable pipeline. </li>
+                            </ol>
+                        </p>
+					</div>
 					
 				<div class="row">
 					</div>
