Update on Index file
Updated Index file for font alignment (wiki, github, linux foundation) and link change for Sonic build image url

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<li><a style="color: black" href="https://github.com/Azure/SONiC/wiki/Building-Guide">Building Guide</a></li>  				
 				<li><a style="color: black" href="https://github.com/Azure/SONiC/wiki/Testing-Guide">Testing Guide</a></li>  								
 				<li><a style="color: black" href="https://github.com/Azure/SONiC/wiki/technical_faq">Technical FAQ</a></li>				
-				<li><a style="color: black" href="https://azure.github.io/SONiC/sonic_latest_images.html">SONiC Latest Images</a></li>
+				<li><a style="color: black" href="https://sonic-net.github.io/SONiC/sonic_latest_images.html">SONiC Latest Images</a></li>
               </ul>
             </li>            
 			<li class="dropdown">
@@ -149,11 +149,11 @@
         <!-- <a target="_blank" href="https://github.com/Azure/SONiC/wiki" class="mu-read-more-btn">Read More</a> -->
 
 		<p style="display: -webkit-inline-box;">
-			<a class="mu-read-more-btn bbutton" target="_blank" href="https://github.com/Azure/SONiC/wiki">Wiki</a>		
+			<a class="mu-read-more-btn bbutton" style="white-space: nowrap; font-size: 90%" target="_blank" href="https://github.com/Azure/SONiC/wiki">Wiki</a>		
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a class="mu-read-more-btn bbutton" target="_blank" href="https://github.com/Azure/SONiC/blob/master/sourcecode.md">GitHub</a> 
+			<a class="mu-read-more-btn bbutton" style="white-space: nowrap; font-size: 90%" target="_blank" href="https://github.com/Azure/SONiC/blob/master/sourcecode.md">GitHub</a> 
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a class="mu-read-more-btn bbutton" style="white-space: nowrap;" target="_blank" href="https://www.linuxfoundation.org/">Linux Foundation</a>
+			<a class="mu-read-more-btn bbutton" style="white-space: nowrap; font-size: 90%" target="_blank" href="https://www.linuxfoundation.org/">Linux Foundation</a>
 		</p>
 
       </div>
