Updated MoM file
Updated MoM html file for June and July 2022

--- a/MoM.html
+++ b/MoM.html
@@ -105,6 +105,46 @@
                     <th style=" text-align: center; ">Links To Minutes Of The meeting</th>
                 </tr>
 <tr>
+                    <td style="">&nbsp;&nbsp;Jul 26 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://groups.google.com/g/sonicproject/c/pnjagsy_qQs/m/GGfaoj2BAQAJ">Secure Boot & Secure upgrade</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/HX6Bw4rik64/m/cGjgwmu5AQAJ">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Jul 19 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/sonic-net/SONiC/pull/1034">SRv6_uSID</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/lBLOkJFJQUA/m/t5wUixWwAQAJ">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Jul 12 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://groups.google.com/g/sonicproject/c/VvxlEjdsbUo/m/Y2E8xa71AQAJ">No Meeting</a></td>
+		    		<td style=""><a href="https://groups.google.com/g/sonicproject/c/lBLOkJFJQUA/m/wnld3xmuAQAJ">MoM</a></td>
+					</tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Jul 05 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/Junchao-Mellanox/SONiC/blob/e55d24126d046eb003fedae5f439cf82eea9f239/doc/bulk_counter/bulk_counter.md">SONiC Bulk Counter Design</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/lBLOkJFJQUA/m/0DxlB8lEBwAJ">MoM</a></td>
+                    </tr>				
+<tr>
+                    <td style="">&nbsp;&nbsp;Jun 28 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/sonic-net/SONiC/pull/996/files#diff-32984e8e053ae4121b728f8d0c5b034daf4c4bf82a49d0c4a83d513d4dec2618">SONiC gNMI server interface design</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/fVimxR0rFj4/m/eGDp6HEZAgAJ">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Jun 21 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://github.com/sonic-net/SONiC/pull/978">Packet_I/O Update</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/M-nI368bWls/m/9bL8IU2qAQAJ">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Jun 14 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://groups.google.com/g/sonicproject/c/0sdWwfcq0RM/m/UGI8593mBAAJ">SONiC 202205 release update</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/M-nI368bWls/m/dE9iuylZBQAJ">MoM</a></td>
+                    </tr>
+<tr>
+                    <td style="">&nbsp;&nbsp;Jun 07 2022 &nbsp;&nbsp;</td>
+                    <td style="text-align: left; "><a href="https://groups.google.com/g/sonicproject/c/xCbA9nCrbUg/m/fNBMql8oAQAJ">PIT & Yang schema based event stream via gNMI</a></td>
+					<td style=""><a href="https://groups.google.com/g/sonicproject/c/M-nI368bWls/m/dJhLN9YUBQAJ">MoM</a></td>
+                    </tr>
+<tr>
                     <td style="">&nbsp;&nbsp;May 31 2022 &nbsp;&nbsp;</td>
                     <td style="text-align: left; "><a href="https://github.com/clarklee-guizhao/SONiC/blob/pit/doc/pit/Platform_Integration_Test_high_level_design.md">Platform_Integration_Testing</a></td>
 					<td style=""><a href="https://groups.google.com/g/sonicproject/c/CZa5G7B-Q0c/m/luCm7xM4AQAJ">MoM</a></td>
