--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -1169,10 +1169,12 @@ Note:
 			vdata = table[i].children[2].textContent;
 			if (vdata == "Nvidia")
 			    vdata = "Mellanox";
+				
+			if (vdata == "Intel")
+			    vdata = "Barefoot";	
 
 			if (vdata == "Marvell"){
-			    if(table[i].children[1].textContent.search("ARM") != -1)
-				vdata = "Marvell-armhf";
+			    vdata = "Marvell-armhf";
 			}
 
 			if(vendor_data[vdata] == "")
