Updated the comment
Updated the comment

--- a/SONiC_Workshop_Agenda_2022.html
+++ b/SONiC_Workshop_Agenda_2022.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-               <h1 style= "text-align:center;" "font-family:verdana;" > SONiC Workshop Agenda </h1>
+               <h1 style= "text-align:center;" "font-family:verdana;" > SONiC Workshop @Linux Foundation ONE </h1>
 			   <h3 style="text-align:center;" "font-family:verdana;">Thursday, November 17</h3>
 
 
