Updated Supported Platform for Wistron
Updated Supported Platform for Wistron

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -1091,6 +1091,22 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
+<td>Wistron</td>
+<td>sw-to3200k</td>
+<td class="asic_vendor">Marvell</td>
+<td>Teralynx 7</td>
+<td>32x400G</td>
+<td></td>
+</tr>
+<tr>
+<td>Wistron</td>
+<td>6512-32r</td>
+<td class="asic_vendor">Marvell</td>
+<td>Teralynx 7</td>
+<td>32x400G</td>
+<td></td>
+</tr>
+<tr>
 <td>Wnc</td>
 <td>OSW1800</td>
 <td class="asic_vendor">Intel</td>
