Updating Contributor section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     <!-- Main style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">    
-
+    <!-- Contributor style sheet -->
+    <link rel="stylesheet" href="assets/css/contributors.css" type="text/css" />
    
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -328,8 +329,7 @@
               <!-- <p style="color: black; font-size: 18px" >Rapid innovation in silicon, CPU, power, port density, optics and speed while preserving in one unified software solution across multiple platforms!</p> -->
             </div>
             <!-- End Title -->
-                         <center><img style="height: auto; text-align:center; width: 80%;" alt="img" src="assets/img/all_partners2_1920x1320.jpg"></center>
-
+            <ul id="contributors"></ul>
       </div>
     </div>
 
@@ -440,7 +440,8 @@
       </script>
   <!-- Custom js -->
   <script src="assets/js/custom.js"></script> 
-
+  <!-- Contributor Rendering -->
+  <script src="assets/js/contributors.js"></script>
   </body>
   <!--  
    Copyright © The Linux Foundation®.  SONiC and SONiC Foundation are trademarks of The Linux Foundation. For web site terms of use, trademark usage and other project policies please see https://linuxfoundation.org/policies/. 
