Updated 2 new platform and added a note on build image
Updated the file with a Note to mention that build images are manually updated due to permission issue in auto generated script. Also added 2 new platform for Tencent

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -238,6 +238,7 @@ function Port_Config() {
 </tbody>
 </table>
 <h2><p style="text-align: left; font-family: Verdana, sans-serif; color: #2E86C1; font-size: 20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Following is the list of platforms that supports SONiC.</p></h2>
+<h2><p style="text-align: left; font-family: Verdana, sans-serif; color: #2E86C1; font-size: 20px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note : The column "Successful build" is an auto generated link using script. However due to permission issue on executing the script, the auto generation is not happening. Hence we have manually updated the column until 22nd December 2022 build image. For latest build <a  href="https://sonic-build.azurewebsites.net/ui/sonic/Pipelines">click here</a> </p></h2>
 <br>
 
 <table id="myTable" style="width: 70%; background-color: #ffffff; font-family: Verdana, sans-serif;" align="center">
@@ -248,7 +249,7 @@ function Port_Config() {
 <th>ASIC Vendor</th>
 <th>Switch ASIC</th>
 <th>Port Configuration</th>
-<th>Latest successful build</th>
+<th>Successful build</th>
 </tr>
 </thead>
 <tbody id="data_table">
@@ -955,6 +956,14 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
+<td>Mitac</td>
+<td>LY1200-B32H0-C3</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk</td>
+<td>32x100G</td>
+<td></td>
+</tr>
+<tr>
 <td>Nvidia</td>
 <td>SN2010</td>
 <td class="asic_vendor">Nvidia</td>
@@ -1035,14 +1044,6 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
-<td>Mitac</td>
-<td>LY1200-B32H0-C3</td>
-<td class="asic_vendor">Broadcom</td>
-<td>Tomahawk</td>
-<td>32x100G</td>
-<td></td>
-</tr>
-<tr>
 <td>Pegatron</td>
 <td>Porsche</td>
 <td class="asic_vendor">Nephos</td>
@@ -1106,6 +1107,23 @@ function Port_Config() {
 <td>32x400G</td>
 <td></td>
 </tr>
+<tr>
+<td>Tencent</td>
+<td>TCS8400-24CC8CD</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 4</td>
+<td>24x200G + 8*400G</td>
+<td></td>
+</tr>
+<tr>
+<td>Tencent</td>
+<td>TCS9400-128CC</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 4</td>
+<td>128x200G</td>
+<td></td>
+</tr>
+
 <tr>
 <td>Wnc</td>
 <td>OSW1800</td>
