--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="mu-about-us-right"> 
 			  <center><h3 style="color: #01BAFD; margin-top: 50px; font-weight: bold"> Past SONiC Events</h3></center>
 			  <figure>
-			  <center><a href="https://events.linuxfoundation.org/open-networking-and-edge-exec-forum/" ><img style="display:block;" width="100%" height="350.35" src="assets/img/slider/2.jpg" /></center>
+			  <center><a href="https://www.youtube.com/playlist?list=PL0bkBeEamheDmPEkxbJAlo65IQ6VgTbRH" ><img style="display:block;" width="100%" height="350.35" src="assets/img/slider/2.jpg" /></center>
 			  </a>
 			  </figure>				
 			  </div>
