--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -533,14 +533,6 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
-<td>Aurora 610</td>
-<td>BFN-T10-032D-020</td>
-<td class="asic_vendor">Intel</td>
-<td>Tofino</td>
-<td>48x 25G + 8x 100G</td>
-<td></td>
-</tr>
-<tr>
 <td>Celestica</td>
 <td>DX010</td>
 <td class="asic_vendor">Broadcom</td>
@@ -968,6 +960,14 @@ function Port_Config() {
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk</td>
 <td>32x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Netberg </td>
+<td>Aurora 610</td>
+<td class="asic_vendor">Intel</td>
+<td>Tofino BFN-T10-032D-020</td>
+<td>48x 25G + 8x 100G</td>
 <td></td>
 </tr>
 <tr>
