--- a/workgroups.html
+++ b/workgroups.html
@@ -361,6 +361,21 @@
                             </ol>
                         </p>
 					</div>
+										<div class="col-lg-6 col-md-6">
+                        <h3 style="color: #01BAFD; margin-top: 40px; font-weight: bold"> SONiC-OTN Workgroup </h3>
+                        <p>Join the mailing list <font color="#0000FF" size="3">sonic-wg-otn+subscribe@lists.sonicfoundation.dev</font></p>
+                        <p> Workgroup <a href="https://lists.sonicfoundation.dev/g/sonic-wg-otn/messages"><font color="#0000FF" size="3">SONiC-OTN Workgroup</font></a></p>
+                        <p> Current Status : <font color="Black" size="3">Active</font></p>
+						<h4 style="margin-top: 20px; font-weight: bold">SONiC-OTN-Workgroup Charter</h4>
+                        <p>
+                            <ol>
+                            <li>This group will focus on enabling SONiC to support optical transport networking equipment, including  <br>
+									- Optical transponders/muxponders  <br>
+									- Optical line equipment such as optical amplifiers, wavelength selective switches. <br>
+									- Optical DWDM/Grey pluggable modules on switching/routing equipment </li>
+                            </ol>
+                        </p>
+                    </div>
 					
 				<div class="row">
 					</div>
