Community Calendar for Webpage
Updated Community Calendar for SONiC Webpage

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 				<li><a style="color: black" href="https://github.com/sonic-net/SONiC/blob/master/SONiC%20Foundation%20Technical%20Charter.pdf">SONiC Foundation Technical Charter</a></li>
 				<li><a style="color: black" href="https://github.com/Azure/sonic-security">Security Process</a></li>
 		        <li><a style="color: black" href="https://github.com/sonic-net/SONiC/wiki/SONiC-Logo-and-Trademark-Guidance">License & Logo</a></li>
+				<li><a style="color: black" href="Calender.html">Community Calendar</a></li>
 				
               </ul>
             </li>  
