--- a/menu.html
+++ b/menu.html
@@ -59,6 +59,7 @@
 						<li><a style="color: black" href="https://github.com/sonic-net/SONiC/blob/master/SONiC%20Foundation%20Technical%20Charter.pdf">SONiC Foundation Technical Charter</a></li>
 		                <li><a style="color: black" href="https://github.com/Azure/sonic-security">Security Process</a></li>
 		                <li><a style="color: black" href="https://github.com/Azure/SONiC/wiki/SONiC-Logo-Image">License & Logo</a></li>
+						<li><a style="color: black" href="Calendar.html">Community Calendar</a></li>
 				</ul>
             </li>  
           </ul>                     
