Updated Supported Platform for Nvidia
Updated Supported Platform for Nvidia 2201

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -988,6 +988,14 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Nvidia</td>
+<td>SN2201</td>
+<td class="asic_vendor">Nvidia</td>
+<td>Spectrum</td>
+<td>48x1G + 4x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Nvidia</td>
 <td>SN2410</td>
 <td class="asic_vendor">Nvidia</td>
 <td>Spectrum</td>
@@ -1099,22 +1107,6 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
-<td>Wistron</td>
-<td>sw-to3200k</td>
-<td class="asic_vendor">Marvell</td>
-<td>Teralynx 7</td>
-<td>32x400G</td>
-<td></td>
-</tr>
-<tr>
-<td>Wistron</td>
-<td>6512-32r</td>
-<td class="asic_vendor">Marvell</td>
-<td>Teralynx 7</td>
-<td>32x400G</td>
-<td></td>
-</tr>
-<tr>
 <td>Tencent</td>
 <td>TCS8400-24CC8CD</td>
 <td class="asic_vendor">Broadcom</td>
@@ -1128,6 +1120,22 @@ function Port_Config() {
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk 4</td>
 <td>128x200G</td>
+<td></td>
+</tr>
+<tr>
+<td>Wistron</td>
+<td>sw-to3200k</td>
+<td class="asic_vendor">Marvell</td>
+<td>Teralynx 7</td>
+<td>32x400G</td>
+<td></td>
+</tr>
+<tr>
+<td>Wistron</td>
+<td>6512-32r</td>
+<td class="asic_vendor">Marvell</td>
+<td>Teralynx 7</td>
+<td>32x400G</td>
 <td></td>
 </tr>
 <tr>
