Updated Ragile Platform
Updated Ragile Platform

--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -1107,6 +1107,38 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
+<td>Ragile</td>
+<td>b6510-48v8c</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3</td>
+<td>48x25G+8x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Ragile</td>
+<td>b6910-64c</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 3</td>
+<td>64x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Ragile</td>
+<td>b6510-32c</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3</td>
+<td>32x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Ragile</td>
+<td>b6920-4s</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 3</td>
+<td>128x100G</td>
+<td></td>
+</tr>
+<tr>
 <td>Tencent</td>
 <td>TCS8400-24CC8CD</td>
 <td class="asic_vendor">Broadcom</td>
