--- a/Supported-Devices-and-Platforms.html
+++ b/Supported-Devices-and-Platforms.html
@@ -988,6 +988,14 @@ function Port_Config() {
 </tr>
 <tr>
 <td>Nvidia</td>
+<td>SN2201</td>
+<td class="asic_vendor">Nvidia</td>
+<td>Spectrum</td>
+<td>48x1G + 4x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Nvidia</td>
 <td>SN2410</td>
 <td class="asic_vendor">Nvidia</td>
 <td>Spectrum</td>
@@ -1099,19 +1107,35 @@ function Port_Config() {
 <td></td>
 </tr>
 <tr>
-<td>Wistron</td>
-<td>sw-to3200k</td>
-<td class="asic_vendor">Marvell</td>
-<td>Teralynx 7</td>
-<td>32x400G</td>
+<td>Ragile</td>
+<td>b6510-48v8c</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3</td>
+<td>48x25G+8x100G</td>
 <td></td>
 </tr>
 <tr>
-<td>Wistron</td>
-<td>6512-32r</td>
-<td class="asic_vendor">Marvell</td>
-<td>Teralynx 7</td>
-<td>32x400G</td>
+<td>Ragile</td>
+<td>b6910-64c</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 3</td>
+<td>64x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Ragile</td>
+<td>b6510-32c</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Trident 3</td>
+<td>32x100G</td>
+<td></td>
+</tr>
+<tr>
+<td>Ragile</td>
+<td>b6920-4s</td>
+<td class="asic_vendor">Broadcom</td>
+<td>Tomahawk 3</td>
+<td>128x100G</td>
 <td></td>
 </tr>
 <tr>
@@ -1128,6 +1152,22 @@ function Port_Config() {
 <td class="asic_vendor">Broadcom</td>
 <td>Tomahawk 4</td>
 <td>128x200G</td>
+<td></td>
+</tr>
+<tr>
+<td>Wistron</td>
+<td>sw-to3200k</td>
+<td class="asic_vendor">Marvell</td>
+<td>Teralynx 7</td>
+<td>32x400G</td>
+<td></td>
+</tr>
+<tr>
+<td>Wistron</td>
+<td>6512-32r</td>
+<td class="asic_vendor">Marvell</td>
+<td>Teralynx 7</td>
+<td>32x400G</td>
 <td></td>
 </tr>
 <tr>
